--- a/packages/terra-clinical-application-site/src/navigation-application/powerchart-web/patient-context/PatientContext.scss
+++ b/packages/terra-clinical-application-site/src/navigation-application/powerchart-web/patient-context/PatientContext.scss
@@ -1,12 +1,12 @@
 .pc-container {
   display: flex;
-  height: calc(100% - 2px);
-  justify-content: space-between;
   height: 100%;
+  justify-content: space-between;
 }
 
 .pc-start {
   display: flex;
+  height: 100%;
   flex: 1 1 auto;
   justify-content: flex-start;
 }
@@ -27,6 +27,7 @@
   flex: 0 0 auto;
   font-weight: bold;
   height: 100%;
+  margin: 0;
 
   &:focus,
   &:active,
